--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gradeplus-next",
+  "name": "trifold-pwa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@tabler/core": "^1.0.0-beta17",
+    "@tabler/icons-react": "^2.4.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "next": "13.1.6",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-redux": "^8.0.5",
+    "sass": "^1.58.1",
+    "typescript": "4.9.5",
+    "yup": "^1.0.0"
   }
 }
